tests/configuration/invalid_environment/non_existent/configuration/settings.py
from selva.configuration import environment as env

env.get_str("DOES_NOT_EXIST")
